# markbloom

./: .gitignore  AGENTS.md  README.ja.md  README.md  ecosystem.config.cjs  index.html  package.json  pnpm-lock.yaml
apps/mac/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac/src-tauri/icons/: .gitignore  icon.icns
apps/mac/src-tauri/src/: main.rs
assets/: _basePickBy-Cbxeobyz.js  _basePickBy-DP2_Oj4k.js  _basePickBy-QP-YpClD.js  _baseUniq-Bbrj-kOs.js  _baseUniq-CmthBSK4.js  _baseUniq-T2ba0fhf.js  arc-Dg8XGmOa.js  arc-DpnK3qgZ.js  arc-NXow08us.js  architectureDiagram-VXUJARFQ-BBqyIcxO.js  architectureDiagram-VXUJARFQ-BgT80BXz.js  architectureDiagram-VXUJARFQ-EpuCpuTf.js  blockDiagram-VD42YOAC-CJ_A0x-3.js  blockDiagram-VD42YOAC-DTCM3J1z.js  blockDiagram-VD42YOAC-DjT_I5Mo.js  c4Diagram-YG6GDRKO-BBl0Q4Xr.js  c4Diagram-YG6GDRKO-BsKhNt9s.js  c4Diagram-YG6GDRKO-hamxF3vw.js  channel-BU5vgIor.js  channel-CGpMgVjk.js  channel-Cb016J9l.js  chunk-4BX2VUAB-BRiQCo4O.js  chunk-4BX2VUAB-BlY0DnTO.js  chunk-4BX2VUAB-DOkB85s5.js  chunk-55IACEB6-4CBZNmBr.js  chunk-55IACEB6-B1olRaoR.js  chunk-55IACEB6-DKQ-qv4S.js  chunk-B4BG7PRW-BBOum44s.js  chunk-B4BG7PRW-BIIC2u6U.js  chunk-B4BG7PRW-CJkdryog.js  chunk-DI55MBZ5--DWturT8.js  chunk-DI55MBZ5-BIDiA1iC.js  chunk-DI55MBZ5-D6FlDJAX.js  chunk-FMBD7UC4-CjJZRBmo.js  chunk-FMBD7UC4-D-Eb8Nzq.js  chunk-FMBD7UC4-DDpQcO4M.js  chunk-QN33PNHL-BKQB08Gp.js  chunk-QN33PNHL-PBWa86_6.js  chunk-QN33PNHL-Rjs0Pk03.js  chunk-QZHKN3VN-0h4brrXX.js  (+146 more)
pr-62/: index.html
pr-63/: index.html
pr-65/: index.html
pr-67/: index.html
pr-69/: index.html
(+1482 files in other folders)
